--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,12 +6,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_photos">Flickr Photos</string>
     <string name="login_label">Connect to Twitter</string>
-    <string name="title_activity_timeline">TimelineActivity</string>
+    <string name="title_activity_timeline">Home</string>
     <string name="foo_label">\@foo</string>
     <string name="tweet_body_label">This is the tweet body</string>
-    <string name="title_activity_compose">ComposeActivity</string>
+    <string name="title_activity_compose">Compose</string>
     <string name="compose_tweet_hint">What\'s happening?</string>
     <string name="action_tweet">Tweet</string>
-    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
+    <string name="title_activity_tweet_detail">Tweet</string>
 
 </resources>
