--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="compose_tweet_hint">What\'s happening?</string>
     <string name="action_tweet">Tweet</string>
     <string name="title_activity_tweet_detail">Tweet</string>
+    <string name="reply">Reply</string>
+    <string name="max_chars">140</string>
 
 </resources>
